# wizard-assistant-bot

./: .gitignore  LICENSE  README.md  addressbook.pkl  main.py  pyproject.toml  requirements.txt
classes/: AddressBook.py  Fields.py  Note_class.py  Record.py  __init__.py  customErrors.py
docs/: commands-example.md  publish-package.md
helpers/: book_operations.py  constants.py  json_converter.py  wrappers.py
src/remembrall/: __init__.py  __main__.py
src/remembrall/classes/: AddressBook.py  Fields.py  Note_class.py  Record.py  __init__.py  customErrors.py
src/remembrall/helpers/: book_operations.py  constants.py  customErrors.py  data_upload.py  greeting.py  greeting_for_main.py  help_function.py  intellectual_analysis.py  json_converter.py  output_functions.py  wrappers.py
tests/: test_book_operations.py
